# manim_exts

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/manim_exts/: DoubleArrow3D.py  __init__.py
src/manim_exts/animation/: __init__.py
tests/: augmented_matrix_test.py
